chrome/browser/resources/side_panel/read_anything/read_anything_toolbar.css
/* Copyright 2025 The Chromium Authors
 * Use of this source code is governed by a BSD-style license that can be
 * found in the LICENSE file. */

/* #css_wrapper_metadata_start
 * #type=style-lit
 * #import=//resources/cr_elements/cr_icons_lit.css.js
 * #import=//resources/cr_elements/cr_shared_vars.css.js
 * #import=//resources/cr_elements/md_select_lit.css.js
 * #import=./toolbar_styles_shared.css.js
 * #include=toolbar-styles-shared md-select-lit cr-icons-lit
 * #scheme=relative
 * #css_wrapper_metadata_end */

#play-pause {
  --cr-icon-button-icon-size: 20px;
  --cr-icon-button-fill-color: var(--color-sys-primary);
  --cr-icon-button-size: 28px;
  color: var(--color-side-panel-entry-icon);
}

@media (forced-colors: active) {
    #play-pause {
    --cr-icon-button-fill-color: CanvasText;
  }

  cr-icon-button#color {
    display: none;
  }
}

.audio-background-when-active-false {
  --audio-controls-background: transparent;
  --audio-controls-right-margin: 2px;
  --audio-controls-right-padding: 0px;
}

.audio-background-when-active-true {
  --audio-controls-background: var(--color-sys-tonal-container);
  --audio-controls-right-margin: 6px;
  --audio-controls-right-padding: 4px;
}

#audio-controls {
  background: var(--audio-controls-background);
  border-radius: 18px;
  display: flex;
  flex-direction: row;
  align-items: center;
  height: fit-content;
  margin-inline-end: var(--audio-controls-right-margin);
  padding: 4px var(--audio-controls-right-padding) 4px 4px;
}

.audio-controls {
  margin: 0px;
}

.granularity-container-when-active-true {
  display: flex;
  flex-direction: row;
  align-items: center;
}

.granularity-container-when-active-false {
  display: none;
}

#font-size-decrease {
  margin-inline-start: 12px;
}

#font-size-reset {
  margin-inline-end: 4px;
}

.text-button {
  border: none;
  font-size: 13px;
}

.check-mark-hidden-true {
  visibility: hidden;
}

.check-mark-hidden-false {
  visibility: visible;
}

.toolbar-container {
  display: flex;
  flex-direction: row;
  align-items: center;
  overflow: visible;
  padding: 6px 8px;
  flex-wrap: var(--toolbar-flex-wrap);
}

#more {
  display: none;
}

.separator {
  border: 1px solid var(--color-side-panel-divider);
  display: inline;
  height: 20px;
  margin: 6px 8px;
  width: 0px;
}

.spinner {
  display: inline-block;
  height: 100%;
  vertical-align: middle;
}

.md-select {
  --md-select-text-color: var(--cr-primary-text-color);
  --md-select-width: fit-content;
  margin: 4px 8px 4px 0px;
}

.md-select option {
  --md-select-option-bg-color: var(--color-sys-base-container-elevated);
}

.more-options-icon {
  margin: 8px 6px;
}

#more-options-menu-dialog::part(dialog) {
  min-width: 92px;
}

